# third-eye

./: .clinerules  .clinerules-architect  .clinerules-code  .cursorignore  .cursorrules  .dockerignore  .env.example  .gitignore  CODING_GUIDES_key_principles.md  CODING_GUIDES_py_fastapi.md  CODING_GUIDES_security.md  CODING_GUIDES_svelte5_sveltekit2.md  CODING_GUIDES_svelte5_sveltekit2_testing.md  CODING_GUIDES_svelte_kit_with_be.md  CODING_GUIDES_sveltekit_big_cloudflare.md  CODING_GUIDE_addons_maybe.md  CODING_LEARNINGS_interaction.md  Dockerfile  INFO_progressive_web_app.md  PACKAGE_UPGRADE_INSTRUCTIONS.md  README.md  TASK.md  TASK_TO_SVELTE_KIT.md  TASK__configurable_scenarios.md  TASK__followup-question-feature.md  TASK_compare_multiple.md  gen-ai-gemini-image-analyse.md  package-lock.json  package.json  pre_plugin_svelte.sh  precommit.sh  pyproject.toml  svelte.config.js  vite.config.ts  wrangler.toml
docs/: followup-question-feature.md  learnings-followup-question-feature.md
scripts/: build.config  build.sh  build_and_push.sh  deploy.sh  docker_all.sh  docker_build.sh  docker_deploy.sh  docker_push.sh  docker_run.sh  run_ruff.py
src/: app.d.ts  app.html
src/lib/: constants.ts
src/lib/components/: Camera.svelte  CompareDialog.svelte  ConfirmDialog.svelte  Consent.svelte  InstallPrompt.svelte  (+1 more)
src/routes/: +page.svelte
src/third_eye/: main.py
static/: manifest.json  sw.js
tests/: test_analysis.py  test_image_analyzer.py
working_samples/smart-ai.blog/: README.md  package-lock.json  package.json  wrangler.toml
working_samples/third_eye/: main.py
(+39 files in other folders)
